l4re_kernel: Initialize globals earlier
gcc 13's libgcc contains ctors that expect malloc to work. Therefore
we have to initialize the globals earlier than that. To initialize
them as early as possible we make the initialization function a ctor
with priority 0.

Change-Id: Iee330400cf20e19be12b6a9aeb65e2d3f2d02e04

--- a/l4re_kernel/server/src/Makefile
+++ b/l4re_kernel/server/src/Makefile
@@ -27,6 +27,8 @@ REQUIRES_LIBS  := libc_be_minimal_log_io cxx_io cxx_libc_io libc_minimal l4re \
 
 CXXFLAGS += $(CXXFLAGS_LOW_LEVEL)
 
+CXXFLAGS_globals.cc = -Wno-prio-ctor-dtor
+
 CXXFLAGS += $(CXXFLAGS_$(ARCH))
 SRC_S += $(SRC_S_$(ARCH))
 
