fix clang compilation issues
Fix the following issues when compiling with clang:
  1. Use the `-o` flag for the preprocessor since `clang-cpp` requires
     it and `cpp` allows it.
  2. Don't define the `_GLIBCXX_X86_RDRAND` macro because it enables
     code with intrinsics that clang does not support.
  3. Pass the `-fsized-deallocation` flag to let the `delete` operator
     take an additional argument specifying the size of the deleted
     memory.
  4. Use `std::sprintf` instead of `__builtin_sprintf`, since clang does
     not support the latter.

Points 2-4 apply to libstdc++. We only adapt `v3-12`, as we only need
one version to work with clang and this is the newest. We define a macro
`L4_CLANG_FIXES`, so that the changes to the contrib code stand out.

Change-Id: I8374e9b004754ca3dffffaf916c70f27e6162733

--- a/ldscripts/Makefile
+++ b/ldscripts/Makefile
@@ -61,4 +61,4 @@ crti.o: crti_s.o kip_addr.o
 %.ld: $(PKGDIR)/ARCH-$(ARCH)/%.ld $(SRC_DIR)/Makefile $(SRC_DIR)/generic.h
 	@$(GEN_MESSAGE)
 	$(VERBOSE)$(CPP) -nostdinc -include $(SRC_DIR)/generic.h \
-	      -Wno-trigraphs -U$(UCLIBC_ARCH_$(ARCH)) $(CFLAGS) -P $$CPP_ARGS $< $@
+	      -Wno-trigraphs -U$(UCLIBC_ARCH_$(ARCH)) $(CFLAGS) -P $$CPP_ARGS $< -o $@
