--- a/libgcc/lib/Makefile
+++ b/libgcc/lib/Makefile
@@ -3,6 +3,7 @@ L4DIR	?= $(PKGDIR)/../../..
 
 TARGET         = libgcc-l4.a libgcc-l4.so
 SRC_C_arm-l4f  = ARCH-arm/l4-atomic.c ARCH-arm/l4-atomic-64bit.c
+SRC_S_arm-l4f  = ARCH-arm/atomic_ops_s.S
 DEFINES        += -DIS_L4
 LIBGCC_DO_SHARED = y
 LIBGCC_LIB_DIR = $(SRC_DIR)
