--- a/libgcc/lib/Makefile.libgcc
+++ b/libgcc/lib/Makefile.libgcc
@@ -12,7 +12,10 @@ define process_libgcc_arm
                           $(shell $(AR) t $(1)))"; \
   $(CP) -f $(1) $(2); \
   $(AR) d $(2) $$remove; \
-  $(if $(L4API),$(AR) rs $(2) $(if $(3),ARCH-arm/l4-atomic.s.o ARCH-arm/l4-atomic-64bit.s.o,ARCH-arm/l4-atomic.o ARCH-arm/l4-atomic-64bit.o);)
+  $(if $(L4API),$(AR) rs $(2) $\
+    $(addprefix ARCH-arm/,$(if $(3),$\
+      l4-atomic.s.o l4-atomic-64bit.s.o atomic_ops_s.s.o,$\
+      l4-atomic.o l4-atomic-64bit.o atomic_ops_s.o);))
 endef
 
 process_libgcc = $(if $(process_libgcc_$(ARCH)), \
@@ -23,7 +26,8 @@ ifneq ($(SYSTEM),)
 all:: libgcc.a $(if $(LIBGCC_DO_SHARED),libgcc.so)
 endif
 
-libgcc.a libgcc.so: $(GENERAL_D_LOC) $(LIBGCC_LIB_DIR)/Makefile.libgcc $(foreach f,$(TARGET),$(OBJS_$(f))) $(GCCLIB_HOST)
+libgcc.a libgcc.so: $(GENERAL_D_LOC) $(LIBGCC_LIB_DIR)/Makefile.libgcc \
+		$(foreach f,$(TARGET),$(OBJS_$(f))) $(GCCLIB_HOST)
 	@$(GEN_MESSAGE)
 	$(VERBOSE)$(call process_libgcc,$(GCCLIB_HOST),$@,$(filter libgcc.so,$@))
 
