ldso: disable warning -Wno-gnu-designator for Clang
This disables the following type of warnings:

  warning: use of GNU 'missing =' extension in designator
           [-Wgnu-designator]

for code where array members are initialized using designated
initializers like this:

  [index] = ...

Change-Id: I97b9c1457ecf37978017df42892f5b14f5200b45

--- a/ldso/ldso/Makefile
+++ b/ldso/ldso/Makefile
@@ -83,7 +83,11 @@ CXXFLAGS := $(filter-out -Wmissing-declarations, $(CXXFLAGS))
 CXXFLAGS += -DL4_NO_RTTI -fno-rtti -fno-exceptions -fvisibility=hidden \
             -fno-threadsafe-statics -O3
 
+ifeq ($(BID_COMPILER_TYPE),clang)
+WARNINGS += -Wno-gnu-designator
+endif
+
 CPPFLAGS := $(filter-out -DL4SYS_USE_UTCB_WRAP=1, $(CPPFLAGS))
 
 # Suppress false-positive warnings
-CFLAGS   += -Wno-bad-function-cast
+WARNINGS += -Wno-bad-function-cast
