Revert "libgcc: don't try to overwrite atomic builtins with Clang"
This reverts commit 4f40c5cd1cef7c605fe755daf0fd021a4e4301e0.

Change-Id: Iec2f143d18dfcf0cad44158a0472c0a704e48784

--- a/libgcc/lib/Makefile.libgcc
+++ b/libgcc/lib/Makefile.libgcc
@@ -18,8 +18,7 @@ define process_libgcc_arm
       l4-atomic.o l4-atomic-64bit.o atomic_ops_s.o);))
 endef
 
-process_libgcc = $(if $(and $(BID_COMPILER_IS_GCC),\
-		            $(process_libgcc_$(ARCH))), \
+process_libgcc = $(if $(process_libgcc_$(ARCH)), \
                       $(process_libgcc_$(ARCH)), \
                       $(process_libgcc_generic))
 
