Revert "arm: move L4 atomic syscall from libl4sys to libgcc"
This reverts commit 8c5b25275e1ecfd2fe5f37b944561535c9782c9b.

Change-Id: If1467eada5609d99a3ec82b2b7e20508ab068724

--- a/l4sys/lib/src/Makefile
+++ b/l4sys/lib/src/Makefile
@@ -16,6 +16,7 @@ CXXFLAGS                    += -DL4_NO_RTTI -fno-rtti -fno-exceptions
 DEFINES                      = -DL4_KIP_ADDR=$(L4_KIP_ADDR)
 
 SRC_CC                       = kobject.cc
+SRC_S_libl4sys-arm          += ARCH-arm/atomic_ops_s.S
 SRC_C_libl4sys-ppc32        += ARCH-ppc32/atomic_ops.c
 SRC_S_libl4sys-sparc        += ARCH-sparc/atomic_ops.S
 
@@ -46,6 +47,7 @@ SRC_S_libl4sys-l4x.so        = $(SRC_S_libl4sys-$(ARCH))
 
 SRC_C_l4lx-arm               = utcb.c
 SRC_C_l4lx-amd64             = utcb.c
+SRC_S_l4lx-arm               = ARCH-arm/atomic_ops_s.S
 SRC_C_l4lx-mips              = utcb.c
 SRC_C_l4lx-ppc32             = utcb.c ARCH-ppc32/atomic_ops.c
 SRC_C_l4lx-x86               = ARCH-x86/utcb-l4x.c
