uclibc: Added support for creation of Static Position-Independent Executables (PIE) on aarch64
Original commit: 3e14288eaaf62124d090b5225665632e1fe5d47c
Original author: linted <linted@users.noreply.github.com>

Updated config to allow compilation of rcrt1.o for aarch64 and modified it's crt1.S to relocate dynamic section prior to __uClibc_main.

Disabled stack protector when compiling reloc_static_pie.c to avoid TLS access prior to it being setup.

Signed-off-by: linted <linted@users.noreply.github.com>
Change-Id: I7abd18001d2ded80dd530f335f66bb013f09f7f5

--- a/uclibc/lib/contrib/uclibc/libc/misc/internals/Makefile.in
+++ b/uclibc/lib/contrib/uclibc/libc/misc/internals/Makefile.in
@@ -17,7 +17,7 @@ MISC_INTERNALS_SRC := $(patsubst %.c,$(MISC_INTERNALS_DIR)/%.c,$(CSRC-y))
 MISC_INTERNALS_OBJ := $(patsubst %.c,$(MISC_INTERNALS_OUT)/%.o,$(CSRC-y))
 
 CFLAGS-__uClibc_main.c := $(SSP_DISABLE_FLAGS)
-
+CFLAGS-reloc_static_pie.c := $(SSP_DISABLE_FLAGS)
 
 libc-y += $(MISC_INTERNALS_OBJ)
 ifneq ($(UCLIBC_FORMAT_SHARED_FLAT),y)
