libpthread: repair initialization and remove obsolete CRT0
As of Ibcf58e25798201bc2802afdf37799703934c16ee the CRT0 variable is no
longer used. Remove it.

Repair the libpthread.so initialization by fixing the dependency to
so_init-$(ARCH).S. This corresponding object encodes a call to
__pthread_initialize_minimal() into the .init section. The code in the
.init section is executed after executing the _init function prolog in
crti.S and before the epilog of _init in crtn.S.

The old code did NOT add so_init-$(ARCH).s.o to libpthread.so at all.
Nevertheless the pthread library was initialized by an explicit call
from __uClibc_init(). But rather play safe by doing this from the _init
function as well.

The side effect of the missing dependency was that libpthread.so was
always rebuilt even if there were no changes in any dependent objects.

Change-Id: Ib4ebb324cc225b93f7ea7ab216a32f871667f1ee

--- a/uclibc/lib/libpthread/src/Makefile
+++ b/uclibc/lib/libpthread/src/Makefile
@@ -25,8 +25,8 @@ SRC_C      += spinlock.c mutex.c condvar.c rwlock.c errno.c specific.c \
               cancel.c ptcleanup.c errno-loc.c signals.c \
               sysdeps/$(DIR_$(ARCH))/pspinlock.c
 SRC_C_libpthread.a += libc_pthread_init.c
+SRC_S_libpthread.so += so_init-$(ARCH).S
 SRC_S       = tramp-$(ARCH).S
-SO_INIT     = so_init-$(ARCH)
 WARNINGS    = $(WARNINGS_MEDIUM)
 
 vpath %.c $(SRC_DIR)/sysdeps/generic
@@ -63,8 +63,5 @@ CXXFLAGS  += -include $(CONTRIBDIR)/include/libc-symbols.h
 CXXFLAGS  += -fno-exceptions
 
 include $(L4DIR)/mk/lib.mk
-CRT0 = $(CRTI_so) $(SO_INIT).s.o $(CRTBEGIN_so) $(CRT1_so)
 
 PICFLAGS += -DSHARED
-
-libpthread.so: $(SO_INIT).s.o
