Enable lua io library in ned
The lua io library is already link to ned, so enable it also.

Change-Id: I0472a0e5caa7e89a19df63652e5b3b6aed4b64c1

--- a/ned/server/src/Makefile
+++ b/ned/server/src/Makefile
@@ -11,6 +11,7 @@ SRC_DATA        := ned.lua
 
 SRC_CC          += lua_sleep.cc
 
-REQUIRES_LIBS   := libloader l4re-util l4re lua++ libpthread cxx_libc_io cxx_io
+REQUIRES_LIBS   := libloader l4re-util l4re lua++ libc_support_misc \
+                   libpthread cxx_libc_io cxx_io
 
 include $(L4DIR)/mk/prog.mk
