cxx - Add dependency on libstdc++-headers
cxx/lib/base/src/cxa_pure_delete.cc needs cstddef

Change-Id: I3d8f87cb60888fef724f8c3c26407728e69bfc83

--- a/cxx/Control
+++ b/cxx/Control
@@ -1,4 +1,4 @@
-requires: l4sys l4util
+requires: l4sys l4util libstdc++-headers
 provides: cxx_atexit cxx_atexit_e cxx_base cxx_base_e cxx_io
           cxx_io_e cxx_io_kdebug cxx_io_kdebug_e cxx_util
           cxx_util_e
