--- a/moe/server/src/Makefile
+++ b/moe/server/src/Makefile
@@ -14,8 +14,6 @@ SRC_CC          = main.cc page_alloc.cc dataspace.cc dataspace_cont.cc \
                   delete.cc vesa_fb.cc server_obj.cc \
                   dma_space.cc
 SRC_S          := ARCH-$(ARCH)/crt0.S
-SRC_S_arm64-l4f = exception-el1.S
-SRC_CC_arm64-l4f = exception-el1-handler.cc
 MODE            = sigma0
 
 CAN_PIE_amd64   := y
@@ -26,11 +24,7 @@ BID_CAN_PIE      = $(CAN_PIE_$(ARCH))
 REQUIRES_LIBS  := libkproxy libloader l4re-util libsigma0 \
                   cxx_io cxx_libc_io libc_be_minimal_log_io libsupc++_minimal
 EXTRA_LIBS     := -ll4sys-direct
-DEFINES        += -DL4_CXX_NO_EXCEPTION_BACKTRACE -DL4_MINIMAL_LIBC \
-                  -DEXCEPTION_EL1_DETECT_X1
+DEFINES        += -DL4_CXX_NO_EXCEPTION_BACKTRACE -DL4_MINIMAL_LIBC
 LDFLAGS        += --entry=_real_start
-
-vpath exception-el1-handler.cc $(PKGDIR)/../uclibc/lib/uclibc/ARCH-arm64
-vpath exception-el1.S $(PKGDIR)/../uclibc/lib/uclibc/ARCH-arm64
 
 include $(L4DIR)/mk/prog.mk
