--- a/libloader/include/Makefile
+++ b/libloader/include/Makefile
@@ -1,6 +1,6 @@
 PKGDIR	?= ..
 L4DIR	?= $(PKGDIR)/../../..
 EXTRA_TARGET = elf stack remote_mem loader \
-  remote_app_model local_app_model $(wildcard ARCH-*/adjust_stack)
+  remote_app_model local_app_model $(wildcard ARCH-*/*)
 
 include $(L4DIR)/mk/include.mk
