lib{stdc++-v3,supc++,supc++-minimal}: disable specific warnings
Disable a few specific warnings for certain files in contrib code.

Change-Id: I5f5982a54553a7fe1ebbd6c1aebc5f112a76bbe4

--- a/libsupc++-minimal/Makefile
+++ b/libsupc++-minimal/Makefile
@@ -13,4 +13,7 @@ DEFINES        += -DL4_MINIMAL_LIBC
 
 include $(PKGDIR)/../libsupc++/build/Makefile
 
+WARNINGS_eh_call.cc = -Wno-missing-declarations
+WARNINGS_bad_array_length.cc = -Wno-missing-declarations
+
 vpath %.cc $(SUPCXX_PKG_DIR)/build
