ld.lld: ldscripts: compatible image base
The `-Ttext-segment=` parameter is not available with ld.lld. They use
the `--image-base=` parameter instead.

Change-Id: I65bfacb9b071a78ee4c9bb3cd13f63f6416e6041

--- a/ldscripts/Makefile
+++ b/ldscripts/Makefile
@@ -61,4 +61,5 @@ crti.o: crti_s.o kip_addr.o
 %.ld: $(PKGDIR)/ARCH-$(ARCH)/%.ld $(SRC_DIR)/Makefile $(SRC_DIR)/generic.h
 	@$(GEN_MESSAGE)
 	$(VERBOSE)$(CPP) -nostdinc -include $(SRC_DIR)/generic.h \
-	      -Wno-trigraphs -U$(UCLIBC_ARCH_$(ARCH)) $(CFLAGS) -P $< -o $@
+	      -Wno-trigraphs -U$(UCLIBC_ARCH_$(ARCH)) $(CFLAGS) -P \
+	      $(if $(filter lld,$(BID_LD_TYPE)),-DLD_LLD=1) $< -o $@
