ldso/libdl: fix include path order
The upstream buildsytem has the global uclibc include dir as the first
directory to search in its compiler invocation. If we don't mirror this
then the dhfcn.h header is taken from the ldso directory and not from
the main include directory. While this seems to be bening at the moment
newer versions of uclibc-ng depend on picking the correct dlfcn.h or
will not compile.

Change-Id: Idaccc11baa19c3dccef7992a74d4db87dce4f39e

--- a/ldso/ldso/Makefile
+++ b/ldso/ldso/Makefile
@@ -23,7 +23,8 @@ vpath aeabi_read_tp_generic.c $(UCC_DIR)/ARCH-arm
 vpath ssp-l4.c                $(UCC_DIR)
 
 PRIVATE_INCDIR-x86 := $(CON_DIR)/../libc
-PRIVATE_INCDIR := $(PRIVATE_INCDIR-$(ARCH)) \
+PRIVATE_INCDIR  = $(PRIVATE_INCDIR-$(ARCH)) \
+                  $(OBJ_BASE)/include/uclibc \
                   $(CON_DIR)/ldso/$(DIR_$(ARCH)) \
 		  $(SRC_DIR)           \
 		  $(CON_DIR)/include \
