uclibc: Updates for features or architectures not (yet) used by L4Re
This change squashes upstream commits for code that is not used by L4Re
(yet) or documentation / text files:

--

Suppress warning "_GNU_SOURCE" redefined

Signed-Off-By: Leonid Lisovskiy <lly.dev@gmail.com>

--

hppa: unbreak toolchain building
nios2: allow to build toolchain
frv: resurrect port somehow, totally untested
mark a.out support as not available
frv: enable in config
nptl: remove useless text files
remove accidentally added files while cleaning up incomplete sparcv9 support
add copyright find script
remove unused defines for lm32/or1k
libpthread: add missing file for gdbserver

--

ARC: Disable obstack

Signed-off-by: Anton Kolesov <Anton.Kolesov@synopsys.com>
Cc: Vineet Gupta <Vineet.Gupta1@synopsys.com>
Cc: Alexey Brodkin <abrodkin@synopsys.com>

--

xtensa: fix stack unwinding over __default_sa_restorer
ia64: sync with glibc headers
xtensa: fix __sigsetjmp call12 case

Signed-off-by: Max Filippov <jcmvbkbc@gmail.com>

--

Provide an alias to _obstack_free

Signed-off-by: Alexey Neyman <stilor@att.net>

--

Provide __adjtimex() alias, like glibc.

Signed-off-by: Leonid Lisovskiy <lly.dev@gmail.com>
Signed-off-by: Waldemar Brodkorb <wbx@uclibc-ng.org>

--

Change-Id: If2adc1d8b991be09021d43aa72c375438409ee16

--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -64,14 +64,14 @@ config TARGET_c6x
 config TARGET_cris
 	bool "cris"
 
-#config TARGET_frv
-#	bool "frv (BROKEN)"
+config TARGET_frv
+	bool "frv"
 
 config TARGET_h8300
 	bool "h8300"
 
-#config TARGET_hppa
-#	bool "hppa"
+config TARGET_hppa
+	bool "hppa"
 
 config TARGET_i386
 	bool "i386"
@@ -546,6 +546,7 @@ config UCLIBC_HAS_THREADS_NATIVE
 		   !TARGET_bfin && \
 		   !TARGET_c6x && \
 		   !TARGET_cris && \
+		   !TARGET_frv && \
 		   !TARGET_h8300 && \
 		   !TARGET_hppa && \
 		   !TARGET_ia64 && \
