--- a/uclibc/lib/contrib/uclibc/ldso/ldso/Makefile.in
+++ b/uclibc/lib/contrib/uclibc/ldso/ldso/Makefile.in
@@ -14,6 +14,13 @@ ifneq ($(TARGET_ARCH),arc)
 CFLAGS-rtld += -fno-omit-frame-pointer
 endif
 
+ifeq ($(DODEBUG),y)
+ifeq ($(TARGET_ARCH),arm)
+# This stuff will not work with -funwind-tables / -fasynchronous-unwind-tables
+CFLAGS-rtld += -fno-unwind-tables -fno-asynchronous-unwind-tables
+endif
+endif
+
 CFLAGS-rtld += -I$(top_srcdir)ldso/ldso/$(TARGET_ARCH) -I$(top_srcdir)ldso/include -I$(top_srcdir)ldso/ldso
 CFLAGS-rtld += -DUCLIBC_RUNTIME_PREFIX=\"$(RUNTIME_PREFIX)\" -DUCLIBC_LDSO=\"$(UCLIBC_LDSO)\"
 
