--- a/libstdc++-v3/contrib/libstdc++-v3-11/config.h.in
+++ b/libstdc++-v3/contrib/libstdc++-v3-11/config.h.in
@@ -66,6 +66,9 @@
 /* Define to 1 if you have the <dirent.h> header file. */
 #undef HAVE_DIRENT_H
 
+/* Define if dirfd is available in <dirent.h>. */
+#undef HAVE_DIRFD
+
 /* Define to 1 if you have the <dlfcn.h> header file. */
 #undef HAVE_DLFCN_H
 
@@ -92,6 +95,9 @@
 
 /* Define to 1 if you have the <fcntl.h> header file. */
 #undef HAVE_FCNTL_H
+
+/* Define if fdopendir is available in <dirent.h>. */
+#undef HAVE_FDOPENDIR
 
 /* Define to 1 if you have the <fenv.h> header file. */
 #undef HAVE_FENV_H
@@ -281,6 +287,9 @@
 
 /* Define if <math.h> defines obsolete isnan function. */
 #undef HAVE_OBSOLETE_ISNAN
+
+/* Define if openat is available in <fcntl.h>. */
+#undef HAVE_OPENAT
 
 /* Define if poll is available in <poll.h>. */
 #undef HAVE_POLL
@@ -475,6 +484,9 @@
 
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
+
+/* Define if unlinkat is available in <fcntl.h>. */
+#undef HAVE_UNLINKAT
 
 /* Define to 1 if you have the `uselocale' function. */
 #undef HAVE_USELOCALE
