Document compiler warning exceptions for lua
Change-Id: I065561aab0811bef75067c523c2ff57ae3e59fc1

--- a/lua/lib/build++/Makefile
+++ b/lua/lib/build++/Makefile
@@ -12,6 +12,8 @@ PKGNAME_DIRNAME := lua-c++
 
 # Difference to other version
 
+# WARNINGS EXCEPTION: CFLAGS is used here for C++ files (instead of the usual
+# CXXFLAGS), therefore we filter out C-only warnings
 CFLAGS := $(filter-out $(CFLAGS_L4_GENERIC) $(CFLAGS_C99) \
                        -Wstrict-prototypes -Wmissing-prototypes,$(CFLAGS))
 CFLAGS += $(CXXFLAGS_L4_GENERIC) -x c++
