uclibc-headers: Add missing dependency
If make_vars.mk changes then a directory that is used as source (or
destination) of headers might have changed. Thus make the symlinking
rule depend on the file.

Change-Id: I0a99de85c2d011b9ada4574f04de3eb080caa023

--- a/uclibc-headers/Makefile
+++ b/uclibc-headers/Makefile
@@ -33,7 +33,8 @@ all:: $(HEADERS_LST)
 
 DST_HEADERS   := $(addprefix $(HEADER_DIR)/,$(DST_HEADERS))
 
-$(DST_HEADERS): $(HEADER_DIR)/%: % FORCE $(HEADERS_LST)
+$(DST_HEADERS): $(HEADER_DIR)/%: % FORCE $(HEADERS_LST) \
+                                         $(LIBCSRC_DIR)/make_vars.mk
 	$(VERBOSE)[ -d $(@D) ] || $(MKDIR) -p $(@D)
 	$(VERBOSE)$(LN) -sf $(call absfilename,$<) $@
 
