uclibc: add time64 support for architectures not supported by L4Re
This commit includes the following upstream commits:

xtensa: Add time64 support.
Add time64 support for PowerPC.
Add time64 support for MIPS32.

Change-Id: Ibe08abf6f389e5b7c4c05ed7b9acd72394d36b22

--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -1026,7 +1026,10 @@ config UCLIBC_FALLBACK_TO_ETC_LOCALTIME
 
 config UCLIBC_USE_TIME64
 	bool "Use *time64 syscalls instead of 32bit ones (if possible)"
-	depends on TARGET_arm
+	depends on TARGET_arm                            || \
+		   (TARGET_mips && !CONFIG_MIPS_N64_ABI) || \
+		   TARGET_powerpc                        || \
+		   TARGET_xtensa
 	# TODO: add support for other architectures
 	default n
 
