uclibc-headers: Force to call symlink rule if make_vars.mk changes
Only updating the rule for an individual symlink was not enough. It
also must be ensured that the rule is called when directories change.

Change-Id: I064a3c15b6d0d2f521773ec39ef2953d53070353

--- a/uclibc-headers/Makefile
+++ b/uclibc-headers/Makefile
@@ -38,7 +38,8 @@ $(DST_HEADERS): $(HEADER_DIR)/%: % FORCE $(HEADERS_LST) \
 	$(VERBOSE)[ -d $(@D) ] || $(MKDIR) -p $(@D)
 	$(VERBOSE)$(LN) -sf $(call absfilename,$<) $@
 
-$(HEADER_DIR): $(GENERAL_D_LOC) $(SRC_DIR)/Makefile $(HEADERS_LST)
+$(HEADER_DIR): $(GENERAL_D_LOC) $(SRC_DIR)/Makefile $(HEADERS_LST) \
+               $(LIBCSRC_DIR)/make_vars.mk
 	$(VERBOSE)$(RM) -r $@
 	$(VERBOSE)install -d $@
 	@$(INSTALL_LINK_MESSAGE)
