uclibc: rename arm64 to aarch64
This brings us in sync with the upstream naming scheme and thus makes
updates easier.

Change-Id: If2746303d25588adbb62a559a7922b1ad5d4b78d

--- a/ldso/ldso/Makefile
+++ b/ldso/ldso/Makefile
@@ -10,7 +10,7 @@ PC_EXTRA = Link_DynLinker= rom/libld-l4.so
 DIR_amd64 := x86_64
 DIR_x86   := i386
 DIR_arm   := arm
-DIR_arm64 := arm64
+DIR_arm64 := aarch64
 DIR_ppc32 := powerpc
 DIR_sparc := sparc
 DIR_mips  := mips
