uclibc: changes to upstream files not used by L4Re
This commit collects all upstream changes to files, features and
architectures that are not currently used or supported by L4re as well
as changes to the upstream buildsystem not used by L4Re.

* changes to architectures not supported by L4re

Add time64 support to OpenRISC.
Add time64 support for sparc.

* changes to features not used / supported by L4Re

Fix *stat() and *stat64() when the time is beyond year 2038.
ldso: Use statx() when time64 is enabled.
libc: always redirect *stat() family to statx() with time64 enabled.
libc: Pass 64bit-only time structures to syscalls.

Change-Id: Ia31742c588efd503dc57b44b282b9d458bee1f2b

--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -1028,7 +1028,9 @@ config UCLIBC_USE_TIME64
 	bool "Use *time64 syscalls instead of 32bit ones (if possible)"
 	depends on TARGET_arm                            || \
 		   (TARGET_mips && !CONFIG_MIPS_N64_ABI) || \
+		   TARGET_or1k                           || \
 		   TARGET_powerpc                        || \
+		   TARGET_sparc                          || \
 		   TARGET_xtensa
 	# TODO: add support for other architectures
 	default n
