uclibc/riscv32: add ldso support, enable time64. (currently unused)
Change-Id: Id8315bf657c7486deef8ad0cd537f304b5049982

--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -1030,6 +1030,7 @@ config UCLIBC_USE_TIME64
 		   (TARGET_mips && !CONFIG_MIPS_N64_ABI) || \
 		   TARGET_or1k                           || \
 		   TARGET_powerpc                        || \
+		   TARGET_riscv32                        || \
 		   TARGET_sparc                          || \
 		   TARGET_xtensa
 	# TODO: add support for other architectures
