uclibc: changes to upstream files not used by L4Re
This commit collects all upstream changes to files, features and
architectures that are not currently used or supported by L4re as well
as changes to the upstream buildsystem not used by L4Re.

* changes to architectures not supported by L4re

Add time64 support to ARC.
c6x: fix duplicate include
microblaze: enable time64
superh: enable time64
m68k: enable time64

* changes to features not used / supported by L4Re

Remove unneeded comparisons.
Fix redefinition of _GNU_SOURCE.

* cosmetic changes

add newline at end of file

* changes to the upstream buildsystem not used by L4Re

Add extra `-shared` to link.so command.
uclibc/x86: enable time64
update MAINTAINERS

Change-Id: Ibf7842485ed93e089735ac935f9ed5b9ac5e245d

--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -1026,12 +1026,17 @@ config UCLIBC_FALLBACK_TO_ETC_LOCALTIME
 
 config UCLIBC_USE_TIME64
 	bool "Use *time64 syscalls instead of 32bit ones (if possible)"
-	depends on TARGET_arm                            || \
+	depends on TARGET_arc                            || \
+		   TARGET_arm                            || \
+		   TARGET_i386                           || \
+		   TARGET_m68k                           || \
+		   TARGET_microblaze                     || \
 		   (TARGET_mips && !CONFIG_MIPS_N64_ABI) || \
 		   TARGET_or1k                           || \
 		   TARGET_powerpc                        || \
 		   TARGET_riscv32                        || \
 		   TARGET_sparc                          || \
+		   TARGET_sh                             || \
 		   TARGET_xtensa
 	# TODO: add support for other architectures
 	default n
