[API] VMX: Decouple software and hardware VMCS, add dirty bitmap
Improve the performance of the VMX support, especially targeting the
execution of multiple VMs in parallel and future support for nested
virtualization.

A new kernel object type that represents the hardware VMCS (as an
instance of a hardware vCPU context) is introduced. This enables the
user space to choose the policy of mapping vCPUs to hardware VMCSs.

* When no vCPU is running, the kernel does not allocate any hardware
  VMCS by itself, thus lowering the baseline memory consumption.

* In a memory-constrained environment, a single hardware VMCS can be
  shared by multiple vCPUs (managed by a single VMM task).

* In the typical case, the user space would use a 1:1 mapping of vCPUs
  to hardware VMCSs, thus enabling efficient context switching between
  vCPUs of separate VMs without the contention on a single hardware
  VMCS per physical CPU.

The mechanism for associating the hardware VMCS objects to vCPUs is
similar to the mechanism of associating the user tasks to vCPUs.

To avoid unnecessary copying of unmodified fields from the software VMCS
to the hardware VMCS on each VM entry, the extended vCPU state contains
a bitmap of dirty software VMCS fields now, indicating a value changed
by user space.

(Note: When multiple vCPUs share a common hardware VMCS, the user space
must ensure that the VMCS fields which differ between the vCPUs are
properly copied to the hardware VMCS by setting the dirty bitmap
appropriately. The kernel does not implement any failsafe mechanism for
that.)

The offsets in the offset table of the software VMCS are computed
relative to the area where the values are physically stored now (not
relative to the beginning of the whole software VMCS as before). This
enables to use the same numerical offsets both for the values and for
the dirty bitmap.

The software VMCS offset table has also been reordered and extended
with ranges of the individual groups of VMCS fields. This enable

--- a/l4sys/include/Makefile
+++ b/l4sys/include/Makefile
@@ -13,6 +13,7 @@ EXTRA_TARGET	+= capability kip task factory irq icu thread vcon \
                    semaphore           \
                    iommu               \
                    arm_smccc           \
+                   vcpu_context        \
                    cxx/ipc_array       \
                    cxx/ipc_basics      \
                    cxx/ipc_client      \
