libstdc++: make minimal handling a bit more flexible
Make this better to support more sources that are only relevant for the
full version.

Change-Id: I8a55528f2f7e2aa9122be4ba1c59fa7debc52875

--- a/libstdc++-v3-minimal/Makefile
+++ b/libstdc++-v3-minimal/Makefile
@@ -8,6 +8,7 @@ REQUIRES_LIBS= libsupc++_minimal
 
 STDCXX_PKG_DIR = $(PKGDIR)/../libstdc++-v3
 DEFINES += -DL4_MINIMAL_LIBC
+STDCXX_IS_MINIMAL = y
 
 include $(PKGDIR)/../libstdc++-v3/build/src/Makefile
 
