libstdc++-v3: Update gcc-13 variant
Taken from b5bb59ad508fa645ba325f9da513dc0aa52b58cf

Change-Id: I02f3def784b8024d0bfe7cac5f319cf0135a34ee

--- a/libstdc++-v3/contrib/libstdc++-v3-13/src/experimental/Makefile.am
+++ b/libstdc++-v3/contrib/libstdc++-v3-13/src/experimental/Makefile.am
@@ -25,7 +25,7 @@ include $(top_srcdir)/fragment.am
 toolexeclib_LTLIBRARIES = libstdc++exp.la
 
 if ENABLE_FILESYSTEM_TS
-filesystem_lib = $(top_builddir)/src/filesystem/libstdc++fs.la
+filesystem_lib = $(top_builddir)/src/filesystem/libstdc++fsconvenience.la
 else
 filesystem_lib =
 endif
@@ -65,6 +65,15 @@ AM_CXXFLAGS = \
 
 AM_MAKEFLAGS = \
 	"gxx_include_dir=$(gxx_include_dir)"
+
+if ENABLE_BACKTRACE
+install-exec-local:
+	-cd '$(DESTDIR)$(toolexeclibdir)' && \
+	$(LN_S) libstdc++exp.a libstdc++_libbacktrace.a
+uninstall-local:
+	-cd '$(DESTDIR)$(toolexeclibdir)' && \
+	rm -f libstdc++_libbacktrace.a
+endif
 
 # Libtool notes
 
