libc_backends: proper symbol defining in backends
gcc-14 defines _FILE_OFFSET_BITS=64 on ARM32. This disrupts the symbol
definitions like mmap64/mmap. Actually we need to define _LIBC for
LIBC-related code, hence, include uclibc/libc-symbols.h.

Change-Id: I3d6439261d4fa17ce4365de37366e882fc9d4dce

--- a/libc_backends/lib/misc/Makefile
+++ b/libc_backends/lib/misc/Makefile
@@ -34,5 +34,6 @@ SRC_C       = daemon.c \
               wait.c \
               wait3.c \
               waitpid.c
+CFLAGS      = -DNOT_IN_libc -include libc-symbols.h
 
 include $(L4DIR)/mk/lib.mk
