uclibc-headers/Makefile: clean & cleanall are double-colon targets
Change-Id: I6b67a048df07584f91cfbdd5b453a51b691a16c2

--- a/uclibc-headers/Makefile
+++ b/uclibc-headers/Makefile
@@ -53,4 +53,4 @@ include: $(HEADER_DIR)
 	$(VERBOSE)PKGDIR=$(LIBCSRC_DIR)/../libpthread/include \
 	  $(MAKE) $(MKFLAGS) -C $(LIBCSRC_DIR)/../libpthread/include
 
-clean cleanall:
+clean cleanall::
